# nice-droplets

./: .gitignore  .windsurfrules  README.md  ai_rules.md  ai_rules.txt  pyproject.toml
examples/flex_list/: main.py
examples/item_list/: main.py
examples/list/: main.py
examples/popover/: main.py
examples/typeahead/: main.py
examples/typeahead_table/: main.py
nice_droplets/: __init__.py  dui.py  events.py
nice_droplets/components/: __init__.py  event_handler_tracker.py  hot_key_handler.py  search_manager.py  search_task.py  task.py  task_executor.py  typeahead_task.py
nice_droplets/elements/: flex_list.py  flex_list_factory.py  fullscreen.py  item.js  item.py  item_label.js  item_label.py  item_list.py  item_section.js  item_section.py  itemlist.py  list.js  list.py  popover.js  popover.py  search_list.py  typeahead.py  view_factory.py
nice_droplets/factories/: __init__.py  flex_default_factory.py  flex_item_list_factory.py  flex_list_factory.py  flex_table_factory.py
nice_droplets/tasks/: __init__.py  query_task.py  task.py  task_executor.py
tests/: conftest.py  test_flex_default_factory.py  test_flex_item_list_factory.py  test_flex_list.py  test_flex_list_factory.py  test_flex_list_factory_create.py  test_flex_table_factory.py  test_query_task.py  test_search_list.py  test_tasks.py  test_typeahead.py  utils.py
tools/: run_examples.py
