[tool.poetry]
name = "nice-droplets"
version = "0.1.0"
description = "A collection of helpful extensions for NiceGUI."
license = "MIT"
readme = "README.md"
authors = ["Michael Ikemann <michael.ikemann@gmail.com>"]
keywords = ["nicegui", "extensions", "python", "ui", "web"]

homepage = "https://github.com/alyxion/nice-droplets"
repository = "https://github.com/alyxion/nice-droplets"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
nicegui = "*"
pandas = "^2.2.3"
docutils = "^0.21.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
selenium = "^4.27.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "-q"]
testpaths = ["tests"]
filterwarnings = [
    "ignore:.*pkgutil.find_loader.*:DeprecationWarning",
    "ignore:.*websockets.legacy is deprecated.*:DeprecationWarning",
    "ignore:.*websockets.server.WebSocketServerProtocol is deprecated.*:DeprecationWarning",
    "ignore:.*remove second argument of ws_handler.*:DeprecationWarning"
]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
